# aa-lsm-hook

./: .gitignore  CHANGELOG.md  Makefile  README.md  aa-lsm-hook.go  gen_docs.sh  go.mod  go.sum  meson.build  meson_options.txt  mkrelease.sh  sign-tarball.sh
cache/: clean.go  init.go  load.go  scan.go  update.go
config/: apparmor.go  profile_paths.go
data/: aa-lsm-hook.service  aa-lsm-hook.service.in  meson.build
man/: aa-lsm-hook-compile.8  aa-lsm-hook-compile.8.html  aa-lsm-hook-compile.8.md  aa-lsm-hook-load.8  aa-lsm-hook-load.8.html  aa-lsm-hook-load.8.md  meson.build
profiles/: map.go  update.go
src/: meson.build
src/compile/: main.c  meson.build
src/lib/: build.c  clean.c  hook.c  hook.h  load.c  meson.build  util.c  util.h
src/load/: main.c  meson.build
